<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_margin="46dp"
        android:gravity="center"
        android:text="@string/mood"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:onClick="newMain"
        android:src="@drawable/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/notes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:onClick="newMain_AllNotes"
        android:src="@drawable/notes"
        app:layout_constraintEnd_toStartOf="@+id/calendar_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:max="10"
        android:orientation="horizontal"
        android:progress="5"
        android:progressTint="#EABACA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SeekBar
            android:id="@+id/mood_scale"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:max="10"
            android:progress="5"
            android:progressTint="#EABACA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/happy" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/crying" />

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="244dp"
        android:text="@string/ok"
        android:theme="@style/NiceButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/change"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="244dp"
        android:text="@string/change_feelings"
        android:theme="@style/NiceButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/moreInform"
        android:layout_width="200dp"
        android:layout_height="60sp"
        android:onClick="newMain_Inform"
        android:text="@string/moreInformation"
        android:theme="@style/NiceButton"
        app:layout_constraintBottom_toTopOf="@+id/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <TextView
        android:id="@+id/advice"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/tips_background"
        android:text="@string/advice_day"
        android:textAlignment="center"
        android:textSize="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_button" />

</androidx.constraintlayout.widget.ConstraintLayout>