<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".MainActivityInformation">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_emotions"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/shy"
                style="@style/FeelingsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:drawableLeft="@drawable/shy_more"
                android:text="  Смущение"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sad"
                style="@style/FeelingsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/sad_more"
                android:text="  Грусть"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/happy"
                style="@style/FeelingsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/happy_more"
                android:text="  Счастье"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/angry"
                style="@style/FeelingsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/angry_more"
                android:text="  Злость"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reverie"
                style="@style/FeelingsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/fear_more"
                android:text="  Страх"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confidence"
                style="@style/FeelingsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/relieve_more"
                android:text="  Уверенность"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextEmotion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/background_edittext"
        android:gravity="top"
        android:hint="@string/moreInformation_emotion"
        android:inputType="textMultiLine"
        android:padding="20dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/ok"
        android:theme="@style/NiceButton" />

</LinearLayout>